@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-07-28 Kimmo
+ PATCH: [ 1529599 ] Cleanup DiffWrapper
+  Src: DiffWrapper.cpp DiffWrapper.h MergeDoc.cpp PatchTool.cpp
+
 2006-07-27 Takashi
  PATCH: [ 1527843 ] prevent dialog from flickering
   Src: DirCompProgressDlg.cpp DirView.cpp
